# tree-sitter-loongdoc

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  .release-please-manifest.json  404.html  Cargo.toml  LICENSE  Makefile  README.md  biome.jsonc  index.html  index.txt  loongdoc.d  loongdoc.js  loongdoc.wasm  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
.github/workflows/: bench.yml  ci.yml  clean.yml  docs.yml  fuzz.yml  playground.yml  publish.yml  publish_inline.yml
_next/static/chunks/: 353-e1c392eb9a042d4b.js  563-8b20cd436045bfe9.js  669fb589-978c5f4bb7465668.js  8ebf6bd4-572d0c3539a51497.js  main-app-d63b514b59112436.js  main-b6fc8cd1f314ca6f.js  webpack-4dc0275ebf291789.js
_next/static/css/: 41bf12badaa8221f.css  5c1d7f206f4d7a81.css  acef2db53e746192.css
_next/static/paIbm0zbqS04-PubcfwsD/: _buildManifest.js
benches/: bench_big_file.rs  bench_big_file_inline.rs  bench_parse.rs
benchmark/asciidoctor document/report/: index.html
benchmark/report/: index.html
block/: index.html
common/: common.js
docs/: mkdocs.yml
docs/docs/: block.md  index.md  inline.md  semantics_block.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: asciidoc_inline.rs  loongdoc.rs  loongdoc_inline.rs
inline/: index.html
playground/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
playground/src/app/: Editor.tsx  LoongDoc.tsx  layout.tsx  load_file.tsx  loong_doc.tsx  page.tsx
queries/: asciidoc  asciidoc_inline  loongdoc  loongdoc_inline
search/: search_index.json
semantics_block/: index.html
src/: lib.rs  main.rs
tree-sitter-asciidoc/: CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  injections.scm  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tsconfig.json
tree-sitter-asciidoc/benches/: bench_parse.rs
tree-sitter-asciidoc/bindings/c/: tree-sitter-asciidoc.h  tree-sitter-asciidoc.pc.in
tree-sitter-asciidoc/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-asciidoc/bindings/node/: binding.cc
tree-sitter-asciidoc/bindings/python/tree_sitter_asciidoc/: __init__.py  binding.c
tree-sitter-asciidoc/bindings/rust/: build.rs  lib.rs
tree-sitter-asciidoc/bindings/swift/TreeSitterasciidoc/: asciidoc.h
tree-sitter-asciidoc/common/: lists.js  table.js
tree-sitter-asciidoc/fuzz/: Cargo.toml
tree-sitter-asciidoc/fuzz/fuzz_targets/: parse.rs
tree-sitter-asciidoc/queries/: highlights.scm  injections.scm
tree-sitter-asciidoc/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-asciidoc/src/include/: base_types.h  m-core.h  m-list.h  quick_buffer.h  utils.h
tree-sitter-asciidoc/src/tree_sitter/: alloc.h  array.h
tree-sitter-asciidoc/test/corpus/: admonition.txt  author_line.txt  block_macro.txt  breaks.txt  checked_list.txt  comment.txt  complex_table.txt  delimited_block.txt  included.txt  includes.txt  listing_block.txt  literal_block.txt  ntable.txt  open_block.txt  ordered.txt  quoted_block.txt  raw_block.txt  revision_line.txt  session_block.txt  table.txt  title.txt  unordered.txt
tree-sitter-asciidoc_inline/: CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-asciidoc_inline/benches/: bench_parse.rs
tree-sitter-asciidoc_inline/bindings/c/: tree-sitter-asciidoc_inline 2.h  tree-sitter-asciidoc_inline.pc.in  tree-sitter-asciidoc_inline.pc.in 2
tree-sitter-asciidoc_inline/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-asciidoc_inline/bindings/node/: binding.cc  index.js
tree-sitter-asciidoc_inline/bindings/python/tree_sitter_asciidoc_inline/: __init__.py  binding.c
tree-sitter-asciidoc_inline/bindings/python/tree_sitter_asciidoc_inline 2/: __init__.py
tree-sitter-asciidoc_inline/bindings/rust/: build.rs  lib.rs
tree-sitter-asciidoc_inline/bindings/swift/TreeSitterAsciidocInline/: asciidoc_inline.h
tree-sitter-asciidoc_inline/fuzz/: Cargo.toml
tree-sitter-asciidoc_inline/queries/: highlights.scm  injections.scm
tree-sitter-asciidoc_inline/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-asciidoc_inline/src/include/: base_types.h
tree-sitter-asciidoc_inline/src/tree_sitter/: alloc.h  parser.h
tree-sitter-asciidoc_inline/test/corpus/: anchor_macro.txt  autolink.txt  directive.txt  emphasis.txt  escaped.txt  footnote.txt  id.txt  image_macro.txt  indexterm.txt  inline_anchor_macro.txt  inline_autolink.txt  inline_footnote.txt  inline_image_macro.txt  inline_kbd_macro.txt  inline_link_macro.txt  inline_macro.txt  inline_mail_rx.txt  inline_math_macro.txt  inline_menu_macro.txt  inline_passthrough.txt  inline_xref.txt  kbd_macro.txt  link_macro.txt  mail.txt  math_macro.txt  menu_macro.txt  pass_macro.txt  passthrough.txt  replacement.txt  stem.txt  xref.txt
tree-sitter-loongdoc/: CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  injections.scm  package.json  pyproject.toml  setup.py  tsconfig.json
tree-sitter-loongdoc/common/: document_title.js  lists.js  table.js
tree-sitter-loongdoc/queries/: highlights.scm  injections.scm
tree-sitter-loongdoc/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-loongdoc_inline/: CHANGELOG.md  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
tree-sitter-loongdoc_inline/common/: autolink.js
tree-sitter-loongdoc_inline/queries/: highlights.scm  injections.scm
tree-sitter-loongdoc_inline/src/: grammar.json  node-types.json  parser.c  scanner.c
(+137 files in other folders)
