[package]
name = "asciidoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-asciidoc = { path = "./tree-sitter-asciidoc" }
tree-sitter-asciidoc-inline = { path = "./tree-sitter-asciidoc_inline" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
glob = "0.3.1"
tree-sitter = "0.22.6"

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_big_file"
harness = false
