[package]
name = "loongdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-loongdoc = { path = "./tree-sitter-loongdoc" }
tree-sitter-loongdoc-inline = { path = "./tree-sitter-loongdoc_inline" }
thiserror = "1.0.61"
anyhow = "1.0.86"
tree-sitter = "0.22.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.6", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
glob = "0.3.1"
tree-sitter = "0.22.6"

[[bench]]
name = "bench_parse"
harness = false

[[bench]]
name = "bench_big_file"
harness = false
