[package]
name = "asciidoc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tree-sitter-asciidoc = { path = "../tree-sitter-asciidoc/" }
tree-sitter-asciidoc-inline = { path = "../tree-sitter-asciidoc_inline/" }
tree-sitter = "0.22.6"


[[bin]]
name = "asciidoc"
path = "fuzz_targets/asciidoc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "asciidoc_inline"
path = "fuzz_targets/asciidoc_inline.rs"
test = false
doc = false
bench = false
