[package]
name = "loongdoc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tree-sitter-loongdoc = { path = "../tree-sitter-loongdoc/" }
tree-sitter-loongdoc-inline = { path = "../tree-sitter-loongdoc_inline/" }
tree-sitter = "0.22.6"


[[bin]]
name = "loongdoc"
path = "fuzz_targets/loongdoc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "loongdoc_inline"
path = "fuzz_targets/loongdoc_inline.rs"
test = false
doc = false
bench = false
