[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-asciidoc"
description = "asciidoc grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "asciidoc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache-2.0 License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-asciidoc"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
