[package]
name = "tree-sitter-asciidoc-inline"
description = "asciidocInline grammar for tree-sitter"
version = "0.3.0"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["incremental", "parsing", "tree-sitter", "asciidoc", "adoc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/cathaysia/tree-sitter-asciidoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.24.6"

[build-dependencies]
cc = "1.0.87"
